--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ authors = ["David Russell <davidrussell327@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+scikit-image = "^0.19.3"
+pandas = "^1.5.3"
+matplotlib = "^3.7.0"
+ubelt = "^1.2.3"
+tqdm = "^4.64.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
