--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^1.5.3"
 matplotlib = "^3.7.0"
 ubelt = "^1.2.3"
 tqdm = "^4.64.1"
+black = "^23.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
